cusotmer view booking done next collect payment